# hrpsys-base

./: .travis.sh  .travis.yml
idl/: AutoBalancerService.idl  BalancerService.idl  CMakeLists.txt  RobotHardwareService.idl  StabilizerService.idl
lib/util/: BodyRTC.cpp  BodyRTC.h
python/: hrpsys_config.py
rtc/: CMakeLists.txt
rtc/AutoBalanceStabilizer/: AutoBalanceStabilizer.cpp  AutoBalanceStabilizer.h  AutoBalancerService_impl.cpp  AutoBalancerService_impl.h  CMakeLists.txt  COGTrajectoryGenerator.cpp  COGTrajectoryGenerator.h  SimpleFullbodyInverseKinematicsSolver.h  Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h  StateEstimator.cpp  StateEstimator.h
rtc/AutoBalanceStabilizer/test/: testCOGTrajectoryGenerator.cpp
rtc/AutoBalancer/: AutoBalancer.cpp  AutoBalancer.h  AutoBalancerService_impl.cpp  AutoBalancerService_impl.h  CMakeLists.txt  GaitGenerator.cpp  GaitGenerator.h  Stabilizer.cpp  Stabilizer.h  testResolvedMomentumControl.cpp
rtc/Balancer/: Balancer.cpp  Balancer.h  BalancerComp.cpp  BalancerService_impl.cpp  BalancerService_impl.h  CMakeLists.txt
rtc/Balancer/test/: testWholebodyIK.cpp
rtc/Balancer/util/: Interpolator.cpp  Interpolator.h  Kinematics.cpp  Kinematics.h
rtc/CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h
rtc/ImpedanceController/: JointPathEx.cpp  JointPathEx.h
rtc/KalmanFilter/: KalmanFilter.cpp  KalmanFilter.h  RPYKalmanFilter.h
rtc/RobotHardware/: RobotHardware.cpp  RobotHardware.h  RobotHardwareService_impl.cpp  RobotHardwareService_impl.h  robot.cpp  robot.h
rtc/SequencePlayer/: SequencePlayer.cpp  SequencePlayer.h  interpolator.cpp  testInterpolator.cpp
rtc/Stabilizer/: #Stabilizer.cpp#  Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h
rtc/TorqueFilter/: IIRFilter.cpp  IIRFilter.h
sample/SampleRobot/: samplerobot_auto_balance_stabilizer.py
